force-app/main/default/objects/EYI_Expression_Of_Interest__c/EYI_Expression_Of_Interest__c.object-meta.xml
<CustomObject>
    <label>Expression Of Interest</label>
    <nameField>
        <displayFormat>EOI-{000000}</displayFormat>
        <label>EOI Unique ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expression Of Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>