force-app/main/default/objects/EYI_Expression_Of_Interest__c/fields/EYI_Band__c.field-meta.xml
<CustomField>
    <fullName>EYI_Band__c</fullName>
    <label>Band</label>
    <length>40</length>
    <type>Text</type>
</CustomField>