force-app/main/default/objects/EYI_Expression_Of_Interest__c/fields/EYI_Date_of_Instrument__c.field-meta.xml
<CustomField>
    <fullName>EYI_Date_of_Instrument__c</fullName>
    <label>Date of Instrument</label>
    <type>Date</type>
</CustomField>