force-app/main/default/objects/EYI_Expression_Of_Interest__c/fields/EYI_EOI_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_EOI_Number__c</fullName>
    <label>EOI Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>