force-app/main/default/objects/EYI_Expression_Of_Interest__c/fields/EYI_First_Preference__c.field-meta.xml
<CustomField>
    <fullName>EYI_First_Preference__c</fullName>
    <label>First Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>