force-app/main/default/objects/EYI_Expression_Of_Interest__c/fields/EYI_Instrument_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Instrument_Number__c</fullName>
    <label>Instrument Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>