force-app/main/default/objects/EYI_Expression_Of_Interest__c/fields/EYI_Instrument_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Instrument_Type__c</fullName>
    <label>Instrument Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>