force-app/main/default/objects/EYI_Expression_Of_Interest__c/fields/EYI_IsNew__c.field-meta.xml
<CustomField>
    <fullName>EYI_IsNew__c</fullName>
    <formula>ISNULL( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsNew</label>
    <type>Checkbox</type>
</CustomField>