force-app/main/default/objects/EYI_Expression_Of_Interest__c/fields/EYI_Lead_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lead_Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Enquiry</label>
    <referenceTo>EYI_Lead_Enquiry__c</referenceTo>
    <relationshipLabel>Expression Of Interests</relationshipLabel>
    <relationshipName>Expression_Of_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>