force-app/main/default/objects/EYI_Expression_Of_Interest__c/fields/EYI_Mode_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>EYI_Mode_of_Payment__c</fullName>
    <label>Mode of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Bank Deposit</fullName>
            </value>
            <value>
                <fullName>PDC Cheque</fullName>
            </value>
            <value>
                <fullName>NEFT</fullName>
            </value>
            <value>
                <fullName>RTGS</fullName>
            </value>
            <value>
                <fullName>Card Swipe</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>