force-app/main/default/objects/EYI_Expression_Of_Interest__c/fields/EYI_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>EYI_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Expression Of Interests</relationshipLabel>
    <relationshipName>Expression_Of_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>