force-app/main/default/objects/EYI_Expression_Of_Interest__c/fields/EYI_Second_Preference__c.field-meta.xml
<CustomField>
    <fullName>EYI_Second_Preference__c</fullName>
    <label>Second Preference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>