force-app/main/default/objects/EYI_Expression_Of_Interest__c/fields/EYI_Specific_Remark__c.field-meta.xml
<CustomField>
    <fullName>EYI_Specific_Remark__c</fullName>
    <label>Specific Remark</label>
    <type>TextArea</type>
</CustomField>